--- a/blobstore-uploader/pom.xml
+++ b/blobstore-uploader/pom.xml
@@ -39,7 +39,7 @@
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
-           <version>1.0.13</version>
+           <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.jclouds</groupId>
@@ -86,6 +86,14 @@
                        </configuration>
                    </execution>
                </executions>
+           </plugin>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <configuration>
+                   <source>11</source>
+                   <target>11</target>
+               </configuration>
            </plugin>
        </plugins>
     </build>
