--- a/compute-basics/pom.xml
+++ b/compute-basics/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
         <groupId>org.apache.jclouds.labs</groupId>
         <artifactId>dimensiondata-cloudcontrol</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>2.2.0</version>
     </dependency>
     <!-- note that if you want a smaller distribution
          remove the above dependency and place something 
