--- a/dimensiondata/pom.xml
+++ b/dimensiondata/pom.xml
@@ -33,7 +33,7 @@
     <version>2.2.0-SNAPSHOT</version>
 
     <properties>
-        <jclouds.version>2.2.0-SNAPSHOT</jclouds.version>
+        <jclouds.version>2.2.0</jclouds.version>
     </properties>
 
     <dependencies>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.13</version>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jclouds.driver</groupId>
