--- a/blobstore-uploader/pom.xml
+++ b/blobstore-uploader/pom.xml
@@ -24,7 +24,7 @@
 
    <groupId>blobstore-uploader</groupId>
    <artifactId>blob-uploader</artifactId>
-   <version>2.1.0</version>
+   <version>2.3.0</version>
 
    <properties>
        <jclouds.version>2.3.0</jclouds.version>
@@ -67,6 +67,7 @@
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
+               <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
@@ -74,7 +75,7 @@
                            <goal>shade</goal>
                        </goals>
                        <configuration>
-                           <finalname>blobstore-uploader</finalname>
+                           <finalName>blobstore-uploader</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
