--- a/glacier/pom.xml
+++ b/glacier/pom.xml
@@ -44,7 +44,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <encoding>${project.build.sourceEncoding}</encoding>
+          <encoding>utf-8</encoding>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
