--- a/dimensiondata/pom.xml
+++ b/dimensiondata/pom.xml
@@ -30,10 +30,10 @@
 
     <artifactId>dimensiondata-cloudcontrol-examples</artifactId>
     <name>dimensiondata-cloudcontrol-examples</name>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.3.0</version>
 
     <properties>
-        <jclouds.version>2.2.0</jclouds.version>
+        <jclouds.version>2.3.0</jclouds.version>
     </properties>
 
     <dependencies>
@@ -58,23 +58,17 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.4</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.jclouds.driver</groupId>
-            <artifactId>jclouds-slf4j</artifactId>
-            <version>${jclouds.version}</version>
-            <scope>compile</scope>
-        </dependency>
 
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <encoding>utf-8</encoding>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
