--- a/pom.xml
+++ b/pom.xml
@@ -17,122 +17,124 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.jclouds.examples</groupId>
-  <artifactId>jclouds-examples</artifactId>
-  <version>2.1.0</version>
-  <packaging>pom</packaging>
-  <name>jclouds examples</name>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.apache.jclouds.examples</groupId>
+    <artifactId>jclouds-examples</artifactId>
+    <version>2.3.0</version>
+    <packaging>pom</packaging>
+    <name>jclouds examples</name>
 
-  <scm>
-    <connection>scm:git:https://git-wip-us.apache.org/repos/asf/jclouds-examples.git</connection>
-    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/jclouds-examples.git</developerConnection>
-    <url>https://git-wip-us.apache.org/repos/asf?p=jclouds-examples.git</url>
-    <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <connection>scm:git:https://git-wip-us.apache.org/repos/asf/jclouds-examples.git</connection>
+        <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/jclouds-examples.git</developerConnection>
+        <url>https://git-wip-us.apache.org/repos/asf?p=jclouds-examples.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
-  <properties>
-    <jclouds.version>2.1.0</jclouds.version>
-  </properties>
+    <properties>
+        <jclouds.version>2.3.0</jclouds.version>
+    </properties>
 
-  <repositories>
-    <repository>
-      <id>apache-snapshots</id>
-      <url>https://repository.apache.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>sonatype-nexus-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+    <repositories>
+        <repository>
+            <id>apache-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
-  <modules>
-    <module>blobstore-basics</module>
-    <module>blobstore-largeblob</module>
-    <module>blobstore-uploader</module>
-    <module>chef-basics</module>
-    <module>compute-basics</module>
-    <module>glacier</module>
-    <module>google-lb</module>
-    <module>openstack</module>
-    <module>rackspace</module>
-    <module>dimensiondata</module>
-  </modules>
+    <modules>
+        <module>blobstore-basics</module>
+        <module>blobstore-largeblob</module>
+        <module>blobstore-uploader</module>
+        <module>chef-basics</module>
+        <module>compute-basics</module>
+        <module>glacier</module>
+        <module>google-lb</module>
+        <module>openstack</module>
+        <module>rackspace</module>
+        <module>dimensiondata</module>
+    </modules>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.rat</groupId>
-        <artifactId>apache-rat-plugin</artifactId>
-        <version>0.10</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <excludes>
-            <exclude>**/BUILD.txt</exclude>
-            <exclude>**/CHANGES.txt</exclude>
-            <exclude>**/NOTICE-src.txt</exclude>
-            <exclude>**/README.md</exclude>
-            <exclude>.git/**</exclude>
-            <exclude>**/.gitignore</exclude>
-            <exclude>**/*.json</exclude>
-            <exclude>**/*.log*</exclude>
-            <exclude>**/TODO</exclude>
-            <exclude>.mailmap</exclude>
-            <exclude>.idea/**</exclude>
-            <exclude>**/*.iml</exclude>
-            <exclude>**/.project</exclude>
-            <exclude>**/.classpath</exclude>
-            <exclude>**/.settings/**</exclude>
-            <exclude>**/.checkstyle</exclude>
-            <exclude>**/target/**</exclude>
-            <exclude>.repository/**</exclude>
-            <exclude>**/jquery-1.7.1.min.js</exclude>
-            <!-- binary -->
-          </excludes>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
-  <profiles>
-    <profile>
-      <id>doc</id>
-      <build>
+    <build>
         <plugins>
-          <plugin>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>javadoc</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>aggregate-jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <version>0.10</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/BUILD.txt</exclude>
+                        <exclude>**/CHANGES.txt</exclude>
+                        <exclude>**/NOTICE-src.txt</exclude>
+                        <exclude>**/README.md</exclude>
+                        <exclude>.git/**</exclude>
+                        <exclude>**/.gitignore</exclude>
+                        <exclude>**/*.json</exclude>
+                        <exclude>**/*.log*</exclude>
+                        <exclude>**/TODO</exclude>
+                        <exclude>.mailmap</exclude>
+                        <exclude>.idea/**</exclude>
+                        <exclude>**/*.iml</exclude>
+                        <exclude>**/.project</exclude>
+                        <exclude>**/.classpath</exclude>
+                        <exclude>**/.settings/**</exclude>
+                        <exclude>**/.checkstyle</exclude>
+                        <exclude>**/target/**</exclude>
+                        <exclude>.repository/**</exclude>
+                        <exclude>**/jquery-1.7.1.min.js</exclude>
+                        <!-- binary -->
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
-      </build>
-    </profile>
-  </profiles>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>doc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <executions>
+                            <execution>
+                                <id>javadoc</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>aggregate-jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
