--- a/dimensiondata/pom.xml
+++ b/dimensiondata/pom.xml
@@ -33,14 +33,15 @@
     <version>2.3.0</version>
 
     <properties>
-        <jclouds.version>2.3.0</jclouds.version>
+        <jclouds.version>2.5.0</jclouds.version>
+        <jclouds.cloudcontrol.version>2.4.0</jclouds.cloudcontrol.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.jclouds.labs</groupId>
             <artifactId>dimensiondata-cloudcontrol</artifactId>
-            <version>${jclouds.version}</version>
+            <version>${jclouds.cloudcontrol.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jclouds</groupId>
@@ -56,7 +57,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.11</version>
         </dependency>
 
     </dependencies>
