--- a/openstack/pom.xml
+++ b/openstack/pom.xml
@@ -26,7 +26,8 @@
     <name>openstack-examples</name>
 
     <properties>
-        <jclouds.version>2.3.0</jclouds.version>
+        <jclouds.version>2.5.0</jclouds.version>
+        <jclouds.openstack.version>2.4.0</jclouds.openstack.version>
     </properties>
 
     <dependencies>
@@ -65,12 +66,12 @@
         <dependency>
             <groupId>org.apache.jclouds.labs</groupId>
             <artifactId>openstack-glance</artifactId>
-            <version>${jclouds.version}</version>
+            <version>${jclouds.openstack.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jclouds.labs</groupId>
             <artifactId>openstack-marconi</artifactId>
-            <version>${jclouds.version}</version>
+            <version>${jclouds.openstack.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jclouds.api</groupId>
@@ -81,12 +82,12 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.11</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.46</version>
+            <version>8.0.28</version>
         </dependency>
     </dependencies>
 
